# la-rete-rs

./: Cargo.toml
examples/data/: .gitignore  input-01.json.txt  output-01.txt  rules-01.json
src/: lib.rs  macros.rs  prelude.rs
src/core/: matcher.rs  mod.rs  trie_build_failure.rs
src/core/fact/: fact.rs  mod.rs  predicate.rs  typed_fact.rs
src/core/facts_table/: facts_table.rs  facts_table_into_trie.rs  facts_table_stats.rs  mod.rs
src/core/heq/: heq.rs  mod.rs  trivial.rs
src/core/heq/table/: bucket.rs  kv.rs  mod.rs  table.rs  table_tests.rs
src/core/property/: mod.rs  property.rs  value.rs
src/core/ruleset/: filter.rs  mod.rs  rule.rs  ruleset.rs
src/core/trie/: fork_table.rs  mod.rs  trie.rs
src/json/: js_path.rs  js_path_impl_property.rs  js_path_tests.rs  mod.rs
src/json/js_value_heq/: js_value_eq.rs  js_value_hash.rs  mod.rs
src/json/serde_support/: json_filter.rs  json_rule.rs  json_ruleset.rs  mod.rs
src/json/std/: eq.rs  mod.rs  neq.rs
src/json/std/list/: len_predicates.rs  list.rs  mod.rs
src/json/std/num/: into_js_number.rs  mod.rs  num.rs  num_predicates.rs
src/json/std/str/: mod.rs  str.rs
src/json/tests/: mod.rs  t01.rs  t02.rs
